Finalizado o Modulo 5 e 1,2,3,4 do modulo 6

--- a/JogoForca/JogoForca.vcxproj.filters
+++ b/JogoForca/JogoForca.vcxproj.filters
@@ -47,35 +47,35 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="adiciona_palavra.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="sorteia_palavra.hpp">
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="chuta.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="imprime_cabecalho.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="imprime_erros.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="imprime_palavra.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="le_arquivo.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="letra_existe.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="nao_acertou.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="salvar_arquivo.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="sorteia_palavra.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="adiciona_palavra.hpp">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
